Solved box size on tablets

--- a/src/styles/modules/_main.scss
+++ b/src/styles/modules/_main.scss
@@ -10,11 +10,11 @@
     border-radius: 3px;
     overflow: hidden;
     @include respond(largeTablet) {
-      height: 50vh;
+      height: 65vh;
       width: 80%;
     }
     @include respond(tablet) {
-      height: 50vh;
+      height: 65vh;
       width: 95%;
     }
     @include respond(largePhone) {
